# backend-evolv

./: Cargo.toml
src/: auth.rs  crud.rs  crud_bundles.rs  crud_clients.rs  crud_inventory.rs  crud_sales.rs  database.rs  exams.rs  main.rs  promos.rs  receipts.rs  schedules.rs
src/routers/: admin.rs  cashier.rs  mod.rs
